--- a/together-health/home/templates/about.html
+++ b/together-health/home/templates/about.html
@@ -26,24 +26,13 @@
             <li><a href="about.html">My Plan</a></li>
             {% endif %}
         </ul>
-        <div class="section">
-            <h1>TogetherHealth</h1>
-        </div>
-        <div class="section">
-            <h2 class="text-center">Frequently Asked Questions</h2>
-            <div class="accordion-item my-3 border-top rounded-top rounded-bottom">
-                <h3 class="accordion-header" id="covidHeading">
-                    <button class="accordion-button collapsed text-wrap rounded" type="button" data-bs-toggle="collapse" data-bs-target="#covidCollapse" aria-expanded="false" aria-controls="covidCollapse">
-                        How does this site work?
-                    </button>
-                </h3>
-                <div id="covidCollapse" class="accordion-collapse collapse" aria-labelledby="covidHeading" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        This site works by taking in your information and using a novel algorithm in order to match you with an appropriate health insurance plan according to your needs and information.
-                    </div>
-                </div>  
+        <div class="container">
+            <div class="section">
+                <h1>TogetherHealth</h1>
+            </div>
+                <div class="section">
+                <h2>Who are we?</h2>
             </div>
         </div>
     </body>
-        
 </html>
