--- a/together-health/home/templates/register.html
+++ b/together-health/home/templates/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <form action="/register" method="post"></form>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
@@ -26,24 +27,20 @@
             <li><a href="about.html">My Plan</a></li>
             {% endif %}
         </ul>
+        </form>
         <div class="section">
-            <h1>TogetherHealth</h1>
-        </div>
-        <div class="section">
-            <h2 class="text-center">Frequently Asked Questions</h2>
-            <div class="accordion-item my-3 border-top rounded-top rounded-bottom">
-                <h3 class="accordion-header" id="covidHeading">
-                    <button class="accordion-button collapsed text-wrap rounded" type="button" data-bs-toggle="collapse" data-bs-target="#covidCollapse" aria-expanded="false" aria-controls="covidCollapse">
-                        How does this site work?
-                    </button>
-                </h3>
-                <div id="covidCollapse" class="accordion-collapse collapse" aria-labelledby="covidHeading" data-bs-parent="#faqAccordion">
-                    <div class="accordion-body">
-                        This site works by taking in your information and using a novel algorithm in order to match you with an appropriate health insurance plan according to your needs and information.
-                    </div>
-                </div>  
-            </div>
+            <form action="/register" method="post">
+                <div class="mb-3">
+                    <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+                </div>
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" minlength="8">
+                </div>
+                <div class="mb-3">
+                    <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="password" minlength="8">
+                </div>
+                <button class="btn btn-primary" type="submit">Register</button>
+            </form>
         </div>
     </body>
-        
 </html>
