--- a/together-health/home/templates/homepage.html
+++ b/together-health/home/templates/homepage.html
@@ -17,13 +17,14 @@
             {% if session["user_id"] %}
             <li><a href="index.html">TogetherHealth</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li><a href="form.html">My Form</a></li>
+            <li><a href="plan.html">My Plan</a></li>
+            <li><a href="">Logout</a></li>
             {% else %}
             <li><a href="index.html">TogetherHealth</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="about.html">My Form</a></li>
-            <li><a href="about.html">My Plan</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
             {% endif %}
         </ul>
         <div class="container">
