--- a/together-health/home/templates/register.html
+++ b/together-health/home/templates/register.html
@@ -11,20 +11,20 @@
         <!-- https://favicon.io/emoji-favicons/money-bag/ -->
         <link href="/static/favicon.ico" rel="icon">
         <link href="../../static/css/main.css" rel="stylesheet">
-        <title>TogetherHealth Homepage</title>
+        <title>TogetherHealth Register</title>
     </head>
     <body>
         <ul>
             {% if session["user_id"] %}
             <li><a href="index.html">TogetherHealth</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li><a href="form.html">My Form</a></li>
+            <li><a href="plan.html">My Plan</a></li>
             {% else %}
             <li><a href="index.html">TogetherHealth</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="about.html">My Form</a></li>
-            <li><a href="about.html">My Plan</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="register.html">Register</a></li>
             {% endif %}
         </ul>
         </form>
