--- a/together-health/home/templates/login.html
+++ b/together-health/home/templates/login.html
@@ -34,10 +34,7 @@
                 <div class="mb-3">
                     <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" minlength="8">
                 </div>
-                <div class="mb-3">
-                    <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="password" minlength="8">
-                </div>
-                <button class="btn btn-primary" type="submit">Register</button>
+                <button class="btn btn-primary" type="submit">Login</button>
             </form>
         </div>
     </body>
