--- a/together-health/home/templates/index.html
+++ b/together-health/home/templates/index.html
@@ -33,14 +33,38 @@
         <div class="section">
             <h2 class="text-center">Frequently Asked Questions</h2>
             <div class="accordion-item my-3 border-top rounded-top rounded-bottom">
-                <h3 class="accordion-header" id="covidHeading">
-                    <button class="accordion-button collapsed text-wrap rounded" type="button" data-bs-toggle="collapse" data-bs-target="#covidCollapse" aria-expanded="false" aria-controls="covidCollapse">
+                <h3 class="accordion-header" id="siteHeading">
+                    <button class="accordion-button collapsed text-wrap rounded" type="button" data-bs-toggle="collapse" data-bs-target="#siteCollapse" aria-expanded="false" aria-controls="covidCollapse">
                         How does this site work?
                     </button>
                 </h3>
-                <div id="covidCollapse" class="accordion-collapse collapse" aria-labelledby="covidHeading" data-bs-parent="#faqAccordion">
+                <div id="siteCollapse" class="accordion-collapse collapse" aria-labelledby="siteHeading" data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
                         This site works by taking in your information and using a novel algorithm in order to match you with an appropriate health insurance plan according to your needs and information.
+                    </div>
+                </div>  
+            </div>
+            <div class="accordion-item my-3 border-top rounded-top rounded-bottom">
+                <h3 class="accordion-header" id="dataHeading">
+                    <button class="accordion-button collapsed text-wrap rounded" type="button" data-bs-toggle="collapse" data-bs-target="#dataCollapse" aria-expanded="false" aria-controls="covidCollapse">
+                        Where does my data go?
+                    </button>
+                </h3>
+                <div id="dataCollapse" class="accordion-collapse collapse" aria-labelledby="dataHeading" data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        The data only remains on our database and is used in the algorithm to return an ideal health insurance plan suited to your needs.
+                    </div>
+                </div>  
+            </div>
+            <div class="accordion-item my-3 border-top rounded-top rounded-bottom">
+                <h3 class="accordion-header" id="serviceHeading">
+                    <button class="accordion-button collapsed text-wrap rounded" type="button" data-bs-toggle="collapse" data-bs-target="#serviceCollapse" aria-expanded="false" aria-controls="covidCollapse">
+                        Does this service cost me anything?
+                    </button>
+                </h3>
+                <div id="serviceCollapse" class="accordion-collapse collapse" aria-labelledby="serviceHeading" data-bs-parent="#faqAccordion">
+                    <div class="accordion-body">
+                        This service will not cost anything to you yet.
                     </div>
                 </div>  
             </div>
