--- a/together_health/home/templates/about.html
+++ b/together_health/home/templates/about.html
@@ -14,18 +14,18 @@
     </head>
     <body>
         <ul>
-            {% if session["user_id"] %}
-            <li><a href="index.html">TogetherHealth</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="form.html">My Form</a></li>
-            <li><a href="plan.html">My Plan</a></li>
-            <li><a href="">Logout</a></li>
-            {% else %}
-            <li><a href="index.html">TogetherHealth</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-            {% endif %}
+          {% if session["user_id"] %}
+          <li><a href="/">TogetherHealth</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/form">My Form</a></li>
+          <li><a href="/plan">My Plan</a></li>
+          <li><a href="">Logout</a></li>
+          {% else %}
+          <li><a href="/">TogetherHealth</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/register">Register</a></li>
+          {% endif %}
         </ul>
         <div class="container">
             <div class="section">
@@ -46,7 +46,7 @@
               </ul>
             </div>
           </div>
-      
+
           <div class="col-xl-5 col-l4 col-m12 col-sm12 col-xs12 mb-5">
             <div class="bg-light rounded shadow-sm py-5 px-4"><img src="{{ url_for('static', filename='img/james-headshot.jpg') }}" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0">Saketh Mynampati</h5>
@@ -57,7 +57,7 @@
               </ul>
             </div>
           </div>
-      
+
           <div class="col-xl-5 col-l4 col-m12 col-sm12 col-xs12 mb-5">
             <div class="bg-light rounded shadow-sm py-5 px-4"><img src="{{ url_for('static', filename='img/robert-headshot.jpg') }}" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
               <h5 class="mb-0">Khoi Nguyen</h5>
