--- a/together_health/home/templates/register.html
+++ b/together_health/home/templates/register.html
@@ -15,17 +15,18 @@
     </head>
     <body>
         <ul>
-            {% if session["user_id"] %}
-            <li><a href="index.html">TogetherHealth</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="form.html">My Form</a></li>
-            <li><a href="plan.html">My Plan</a></li>
-            {% else %}
-            <li><a href="index.html">TogetherHealth</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-            {% endif %}
+          {% if session["user_id"] %}
+          <li><a href="/">TogetherHealth</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/form">My Form</a></li>
+          <li><a href="/plan">My Plan</a></li>
+          <li><a href="">Logout</a></li>
+          {% else %}
+          <li><a href="/">TogetherHealth</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/register">Register</a></li>
+          {% endif %}
         </ul>
         </form>
         <div class="section">
