--- a/together_health/form/templates/form.html
+++ b/together_health/form/templates/form.html
@@ -64,13 +64,13 @@
         What is the maximum copay you would like your plan to have?
         <input class="form-control mx-auto w-auto" id="copay" name="copay" placeholder="$100" type="text" minlength="2">
       </div>
+      <div class="mb-3">
+        What is the maximum monthly insurance premium you would like your plan to have?
+        <input class="form-control mx-auto w-auto" id="prem" name="prem" placeholder="$1000" type="text" minlength="2">
+      </div>
       How many dependents do you have?
       <div class="mb-3">
         <input class="form-control mx-auto w-auto" id="dependents" name="dependents" placeholder="0" type="text" minlength="1">
-      </div>
-      <div class="mb-3">
-        What is the maximum monthly insurance premium you would like your plan to have?
-        <input class="form-control mx-auto w-auto" id="premium" name="premium" placeholder="$1000" type="text" minlength="1">
       </div>
       <button class="btn btn-primary" type="submit">Submit Form</button>
     </form>
