--- a/together_health/home/templates/register.html
+++ b/together_health/home/templates/register.html
@@ -31,6 +31,9 @@
         </form>
         <div class="section">
             <form action="/register" method="post">
+              <div class="mb-3">
+                  <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="name" name="name" placeholder="Name" type="text">
+              </div>
                 <div class="mb-3">
                     <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
                 </div>
