--- a/together_health/home/templates/login.html
+++ b/together_health/home/templates/login.html
@@ -28,17 +28,14 @@
           {% endif %}
             </ul>
         <div class="section">
-            <form action="/login" method="post">
+            <form action="/login/" method="post">
                 <div class="mb-3">
                     <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
                 </div>
                 <div class="mb-3">
                     <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password" minlength="8">
                 </div>
-                <div class="mb-3">
-                    <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="Confirm Password" type="password" minlength="8">
-                </div>
-                <button class="btn btn-primary" type="submit">Register</button>
+                <button class="btn btn-primary" type="submit">Login</button>
             </form>
         </div>
     </body>
