--- a/together_health/home/templates/plan.html
+++ b/together_health/home/templates/plan.html
@@ -14,18 +14,18 @@
     </head>
     <body>
         <ul>
-            {% if session["user_id"] %}
-            <li><a href="index.html">TogetherHealth</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="form.html">My Form</a></li>
-            <li><a href="plan.html">My Plan</a></li>
-            <li><a href="">Logout</a></li>
-            {% else %}
-            <li><a href="index.html">TogetherHealth</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
-            {% endif %}
+          {% if session["user_id"] %}
+          <li><a href="/">TogetherHealth</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/form">My Form</a></li>
+          <li><a href="/plan">My Plan</a></li>
+          <li><a href="">Logout</a></li>
+          {% else %}
+          <li><a href="/">TogetherHealth</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/register">Register</a></li>
+          {% endif %}
         </ul>
         <div class="section">
             <h1>TogetherHealth</h1>
@@ -34,11 +34,15 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope = "col">Name</th>
-                        <th scope = "col">Buy/Sell</th>
-                        <th scope = "col">Purchase/Sale Price </th>
-                        <th scope = "col"># of Shares Bought/Sold</th>
-                        <th scope = "col">Time</th>
+                        <th scope = "col">Plan ID</th>
+                        <th scope = "col">Out of Area</th>
+                        <th scope = "col">Tobacco</th>
+                        <th scope = "col">Preexisting Condition</th>
+                        <th scope = "col">Dental Coverage</th>
+                        <th scope = "col">Copay Amount</th>
+                        <th scope = "col">Price for Individual</th>
+                        <th scope = "col">Price for Couple</th>
+                        <th scope = "col">Price for Dependent</th>
                     </tr>
                 </thead>
                     <tbody>
@@ -48,12 +52,16 @@
                             <td>{{ plan.out_of_area }}</td>
                             <td>{{ plan.tobacco }}</td>
                             <td>{{ plan.disease }}</td>
-                            <td>{{ plan.time  }}</td> 
+                            <td>{{ plan.dental }}</td>
+                            <td>{{ plan.copay }}</td>
+                            <td>{{ plan.individual }}</td>
+                            <td>{{ plan.couple }}</td>
+                            <td>{{ plan.dependent }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </thead>
             </table>
         </div>
-    </body>     
+    </body>
 </html>
